--- a/sowmya/workflows/shetty/regression_suite.yml
+++ b/sowmya/workflows/shetty/regression_suite.yml
@@ -10,7 +10,7 @@ on:
       - cron 30 2 * * * 1-5
  jobs:
     run-test:
-      run-on:ubuntu-latest
+      run-on:windows-latest
     steps:
       - name: Checkout code
         uses:actions/checkout@v3
