--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 adopts = --disable-warnings --html=reports/report.html --self-contained-html -v -s
 [markers]=
-    smoke= "data smoke test"
+    smoke: "data smoke test"
